fix z-index on slideshow

--- a/less/oya-views.less
+++ b/less/oya-views.less
@@ -137,10 +137,10 @@ section#block-views-oya-carousel-block {
 		height: 100%;
 		display: table-footer-group;
 		position: relative;
-		z-index: 2000;
+		z-index: 1000;
 		& img {
 			position: relative;
-			z-index: -11111;
+			z-index: -1;
 		}
 	}
 	& div.carousel-caption {
